<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorFondo"
    tools:context="com.salmun.dani.geoport.PuntuacionActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/puntajeFinal"
        android:id="@+id/textView"
        android:textColor="@color/colorTexto"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="31dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Text"
        android:id="@+id/tvwPuntajeFinal"
        android:textColor="@color/colorTexto"
        android:textSize="40sp"
        android:textStyle="bold"
        android:layout_marginTop="74dp"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="150dp"
        android:layout_height="70dp"
        android:text="@string/menu"
        android:id="@+id/btnMenu"
        android:textSize="20sp"
        android:background="@color/colorPrimaryDark"
        android:textColor="@color/colorTexto"
        android:layout_marginBottom="56dp"
        android:layout_alignParentBottom="true" />

    <Button
        android:layout_width="150dp"
        android:layout_height="70dp"
        android:text="@string/continuar"
        android:id="@+id/btnContinuar"
        android:textSize="20sp"
        android:background="@color/colorPrimaryDark"
        android:textColor="@color/colorTexto"
        android:layout_alignEnd="@+id/btnMenu"
        android:layout_alignBottom="@+id/btnMenu"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
