<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorFondo"
    tools:context="com.salmun.dani.geoport.FormasActivity">

    <ImageView
        android:layout_width="220dp"
        android:layout_height="240dp"
        android:id="@+id/imvPais"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/app_name"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        android:background="@null"/>

    <Button
        android:layout_width="115dp"
        android:layout_height="wrap_content"
        android:id="@+id/btn1"
        android:layout_marginTop="42dp"
        android:layout_below="@+id/imvPais"
        android:layout_alignParentStart="true"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorTexto"/>

    <Button
        android:layout_width="115dp"
        android:layout_height="wrap_content"
        android:id="@+id/btn2"
        android:layout_alignTop="@+id/btn1"
        android:layout_alignParentEnd="true"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorTexto"/>

    <Button
        android:layout_width="115dp"
        android:layout_height="wrap_content"
        android:id="@+id/btn3"
        android:layout_alignTop="@+id/btn4"
        android:layout_alignStart="@+id/btn1"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorTexto"/>

    <Button
        android:layout_width="115dp"
        android:layout_height="wrap_content"
        android:id="@+id/btn4"
        android:layout_marginTop="44dp"
        android:layout_below="@+id/btn2"
        android:layout_alignParentEnd="true"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorTexto"/>

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/btn3"
        android:layout_centerHorizontal="true"
        android:id="@+id/frameLayout">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="148dp"
            android:id="@+id/imvCorrecto"
            android:visibility="gone"
            android:background="@null"/>
    </FrameLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/continuar"
        android:id="@+id/btnProxActividad"
        android:layout_alignParentBottom="true"
        android:layout_alignEnd="@+id/tvwTimer"
        android:padding="10dp"
        android:visibility="gone"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorTexto"
        android:textSize="25sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:background="@drawable/wrap_puntuacion"
        android:padding="15dp"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:textColor="@color/colorTexto"
        android:id="@+id/tvwScore"
        android:text="0"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/wrap_puntuacion"
        android:padding="15dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/colorTexto"
        android:textSize="25sp"
        android:id="@+id/tvwTimer"
        tools:ignore="RelativeOverlap"
        android:text="A"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:id="@+id/tvwPaisError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/frameLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:textColor="@color/colorTexto"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/correctas"
        android:id="@+id/tvwContCorrectas"
        android:layout_marginTop="100dp"
        android:textColor="@color/colorTexto"
        android:textSize="20sp"
        android:visibility="invisible"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/incorrectas"
        android:id="@+id/tvwContIncorrectas"
        android:textColor="@color/colorTexto"
        android:textSize="20sp"
        android:visibility="invisible"
        android:layout_below="@+id/tvwContCorrectas"
        android:layout_alignStart="@+id/tvwContCorrectas"
        android:layout_marginTop="30dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/comboMax"
        android:id="@+id/tvwComboMax"
        android:textColor="@color/colorTexto"
        android:textSize="20sp"
        android:visibility="invisible"
        android:layout_below="@+id/tvwContIncorrectas"
        android:layout_alignStart="@+id/tvwContCorrectas"
        android:layout_marginTop="30dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/colorTexto"
        android:id="@+id/tvwFin"
        android:text="@string/fin"
        android:visibility="invisible"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"/>

</RelativeLayout>
